--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@
 Capture du 2018-04-02 01-37-28.png
 /ui/WingSlider2.py
 /ui/WingSlider2.ui
+.gitignore.orig
+poly_point_isect.py
+Nervures.py
+WingCommands.py
+Rod.py
+WingSlider.py
